--- a/styles/styles.css
+++ b/styles/styles.css
@@ -589,6 +589,9 @@ nav {
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
   text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .eventsInfo {
@@ -651,6 +654,7 @@ nav {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 2rem 0;
+  width: 72.5%;
 }
 
 .footer {
