--- a/styles/styles.css
+++ b/styles/styles.css
@@ -636,15 +636,6 @@ nav {
   background-color: #474BB5;
 }
 
-.album img {
-  width: 100%;
-  padding: 1rem 0;
-}
-
-.album .img3 {
-  display: none;
-}
-
 .album .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -654,9 +645,78 @@ nav {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 2rem 0;
-  width: 72.5%;
+  width: 85%;
+  position: relative;
 }
 
+.album .carouselPic,
+.album .carouselHidden {
+  display: none;
+  text-align: center;
+}
+
+.album .carouselVisible {
+  display: block;
+  -webkit-animation: fadePic 2s;
+          animation: fadePic 2s;
+}
+
+.album .carouselPic img {
+  width: 85%;
+  height: auto;
+}
+
+.album .carouselButtons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.album .carouselButtons button {
+  color: #F3FAFF;
+  border-radius: 50%;
+  background-color: #03697C;
+  border: none;
+  font-size: 0.7rem;
+  font-weight: bold;
+  cursor: pointer;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.album .carouselButtons button#carouselPrev {
+  margin-left: -0.5rem;
+}
+
+.album .carouselButtons button#carouselNext {
+  margin-right: -0.5rem;
+}
+
+@-webkit-keyframes fadePic {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadePic {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .footer {
   background-color: #044779;
   text-align: center;
@@ -810,10 +870,6 @@ nav {
     width: 98.5%;
   }
 
-  .album .img3 {
-    display: inline-block;
-  }
-
   .album .wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -828,9 +884,18 @@ nav {
             justify-content: space-evenly;
   }
 
-  .album .wrapper > * {
-    margin-right: 0.7rem;
-    width: calc((100% - 2.1rem) / 3);
+  .album .carouselButtons button {
+    font-size: 0.9rem;
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .album .carouselButtons button#carouselPrev {
+    margin-left: 20%;
+  }
+
+  .album .carouselButtons button#carouselNext {
+    margin-right: 20%;
   }
 }
 @media (min-width: 992px) {
